--- a/package.json
+++ b/package.json
@@ -1,27 +1,38 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
+  "homepage": "https://TsiNik2508.github.io/my-portfolio",
   "private": true,
   "dependencies": {
+    "@fontsource/roboto": "^5.1.0",
+    "@react-pdf-viewer/core": "^3.12.0",
+    "@react-pdf-viewer/default-layout": "^3.12.0",
+    "@react-pdf/renderer": "^4.0.0",
     "@react-three/drei": "^9.115.0",
     "@react-three/fiber": "^8.17.10",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
-    "date-fns": "^2.0.0",
+    "https-browserify": "^1.0.0",
     "i18next": "^23.16.4",
+    "pdfjs-dist": "^3.0.279",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.1",
     "react-i18next": "^15.1.0",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,6 +55,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^6.2.0",
     "sass": "^1.80.6"
   }
 }
