--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
+    "framer-motion": "^11.11.11",
     "https-browserify": "^1.0.0",
     "i18next": "^23.16.4",
     "pdfjs-dist": "^3.0.279",
@@ -23,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-github-calendar": "^4.5.1",
     "react-i18next": "^15.1.0",
+    "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
     "stream-http": "^3.2.0",
