--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chart.js": "^4.4.6",
     "classnames": "^2.5.1",
+    "date-fns": "^2.16.1",
     "framer-motion": "^11.11.11",
     "https-browserify": "^1.0.0",
     "i18next": "^23.16.4",
@@ -22,7 +23,7 @@
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
-    "react-github-calendar": "^4.5.1",
+    "react-github-calendar": "^3.2.2",
     "react-i18next": "^15.1.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
