--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.3.1",
     "react-github-calendar": "^3.2.2",
     "react-i18next": "^15.1.0",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.1",
     "react-router-dom": "^6.27.0",
     "react-scripts": "5.0.1",
